# OVAPortableText

./: .gitignore  CHANGELOG.md  LICENSE  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev/ova/: report_profile_v1_draft.md
doc/native/: portable_text_basics.md
doc/ova/: report_profile_v1.0.md
docs/: API_REFERENCE.md  EXAMPLES.md  PROTOCOL_ALIGNMENT.md  PUBLISHING_CHECKLIST.md  QUICKSTART.md  REAL_WORLD_RECIPES.md  TEST_MATRIX.md  USER_TESTING_CHECKLIST.md  VALIDATION_AND_RESOLVER.md
docs/protocol/: v1.1.md  v1.2.md  v1.3.md
examples/: builder_numbering_roundtrip_demo.py  extended_registries_demo.py  full_report_workflow_demo.py  grid_table_demo.py  image_sources_demo.py  inline_objects_report.py  marks_and_lists_report.py  minimal_report.py  patent_valuation_style_report.py  references_and_marks_demo.py  registry_blocks_report.py  save_and_load_json_demo.py  v11_layout_and_cell_image_demo.py  v13_charts_demo.py  validation_context_demo.py  validation_report.py
examples/sample_outputs/: generate_patent_report_sample_1.py  patent_report_sample_1.json
src/ova_portable_text/: __init__.py  base.py  block_objects.py  content.py  document.py  exceptions.py  helpers.py  inline.py  numbering.py  registry.py  (+6 more)
tests/: test_blocks_and_registry.py  test_builder_roundtrip_and_theme.py  test_content_flow_helpers.py  test_document_validation_error_rendering.py  test_examples_smoke.py  test_extended_registries_and_resolver.py  test_file_io_roundtrip.py  test_image_asset_sources.py  test_inline_objects.py  test_mark_validation.py  test_marks_and_lists.py  test_minimal_report.py  test_numbering.py  test_pie_chart_parallel_arrays.py  test_resolver_debug_summary.py  test_resolver_semantic_figure_alias.py  test_roundtrip_and_runtime_version.py  test_section_batch_helpers.py  test_strict_ids.py  test_style_validation.py  test_table_dataset_validation.py  test_v11_grid_cell_image.py  test_v11_image_block_optional_id.py  test_v11_table_layout.py  test_v11_theme_layout.py  test_v12_section_and_doughnut.py  test_v13_charts.py  test_validation_context_output.py  test_validation_failures.py  test_validation_report_python_alias.py  test_validation_success.py  test_validator_extended_rules.py
(+13 files in other folders)
